@@ -21,19 +21,18 @@ directives = {
       u'notera': 'note',
       u'tips': 'tip',
       u'varning': 'warning',
-      u'fr\u00e5gor': 'questions',
+      # u'fr\u00e5gor': 'questions',
       # NOTE: A bit long, but recommended by http://www.nada.kth.se/dataterm/:
-      u'fr\u00e5gor-och-svar': 'questions',
-      u'vanliga-fr\u00e5gor': 'questions',  
+      # u'fr\u00e5gor-och-svar': 'questions',
+      # u'vanliga-fr\u00e5gor': 'questions',  
       u'meta': 'meta',
       # u'bildkarta': 'imagemap',   # FIXME: Translation might be too literal.
       u'bild': 'image',
       u'figur': 'figure',
-      # u'r\u00e5': 'raw',          # FIXME: Translation might be too literal.
+      u'r\u00e5': 'raw',            # FIXME: Translation might be too literal.
       u'inneh\u00e5ll': 'contents',
       # u'fotnoter': 'footnotes',
       # u'citeringar': 'citations',
-      # u'\u00e4mne': 'topic',
-      u'restructuredtext-test-directive': 'restructuredtext-test-directive' }
+      u'\u00e4mne': 'topic'}
 """Swedish name to registered (in directives/__init__.py) directive name
 mapping."""
