@@ -30,7 +30,7 @@ totest['unknown'] = [
 """,
 """\
 <document source="test data">
-    <system_message level="2" line="1" source="test data" type="WARNING">
+    <system_message level="1" line="1" source="test data" type="INFO">
         <paragraph>
             No directive entry for "reStructuredText-unknown-directive" in module "docutils.parsers.rst.languages.en".
             Trying "reStructuredText-unknown-directive" as canonical directive name.
@@ -39,7 +39,7 @@ totest['unknown'] = [
             Unknown directive type "reStructuredText-unknown-directive".
         <literal_block xml:space="preserve">
             .. reStructuredText-unknown-directive::
-    <system_message level="2" line="3" source="test data" type="WARNING">
+    <system_message level="1" line="3" source="test data" type="INFO">
         <paragraph>
             No directive entry for "reStructuredText-unknown-directive" in module "docutils.parsers.rst.languages.en".
             Trying "reStructuredText-unknown-directive" as canonical directive name.
@@ -48,7 +48,7 @@ totest['unknown'] = [
             Unknown directive type "reStructuredText-unknown-directive".
         <literal_block xml:space="preserve">
             .. reStructuredText-unknown-directive:: argument
-    <system_message level="2" line="5" source="test data" type="WARNING">
+    <system_message level="1" line="5" source="test data" type="INFO">
         <paragraph>
             No directive entry for "reStructuredText-unknown-directive" in module "docutils.parsers.rst.languages.en".
             Trying "reStructuredText-unknown-directive" as canonical directive name.
